Fixed fab overlapping scrollbar; reformatted the comment; remove custom fab implementation

--- a/gridt/src/app/movements/movements.page.scss
+++ b/gridt/src/app/movements/movements.page.scss
@@ -1,8 +1,3 @@
 .shortdescription {
   font-size: 12px;
 }
-
-.custom {
-  width: 10rem;
-  --border-radius: 30px;
-}
